Add more features, add seed, add endpoints for get detail category, ...
